--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 /* CSS Custom Properties */
 :root {
-    --hoofd-kleur: #000000; /* Zwart voor tekst */
+    --hoofd-kleur: #6B503E; /* Zwart voor tekst */
     --accent-kleur: #D3BBAF; /* Beige */
-    --achtergrond-kleur: #FAF4EF; /* Licht beige */
+    --achtergrond-kleur: #ffffff; /* Licht beige */
     --subtiele-achtergrond: #F7EDE6; /*  lichter beige */
-    --hover-kleur: #C3A292; /* Donkerder beige */
+    --hover-kleur: #ffffff; /* Donkerder beige */
 }
 
 /* Algemene instellingen */
@@ -194,7 +194,7 @@ body {
   }
   
   nav button:hover {
-    background-color: #555;
+    background-color: #6B503E;
   }
   
   /* Mobiele optimalisatie */
@@ -248,7 +248,7 @@ body {
 
   /* Algemene styling */
 footer {
-    background-color: #d9c5c5; /* Donkere achtergrondkleur */
+    background-color: #D5C6B4; /* Donkere achtergrondkleur */
     color: #fff; /* Witte tekst */
     padding: 2rem 1rem;
     text-align: center;
@@ -338,4 +338,202 @@ footer {
   }
   
 
+
+
+  /* hamburger nav */
+
+header{
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #ffffff;
+  padding: 25px;
+  transition: 0.3s;
+}
+
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: -250px;
+  background: #ffffff;
+  width: 250px;
+  height: 100%;
+  padding-top: 65px;
+  z-index: 1;
+  transition: 0.5s;
+
+}
+.menu li {
+  list-style-type: none;
+  width: 100%;
+}
+
+.menu li a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  display: block;
+  line-height: 1;
+  transition: 0.3s;
+  padding: 30px;
+  font-size: 24px;
+  box-shadow: 0 1px 0 rgb(255, 255, 255) inset;
+}
+
+.menu li a:hover {
+  padding: 30px;
+  font-size: 24px;
+  box-shadow: 0 1px 0 rgb(255, 255, 255) inset;
+}
+
+.hamburger {
+  position: relative;
+  width: 30px;
+  height: 4px;
+  background: #000000;
+  border-radius: 10px;
+  cursor: pointer;
+  z-index: 2;
+  transition: 0.3s;
+}
+
+.hamburger:before,
+.hamburger:after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  left: 0;
+  background: #000000;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.hamburger:before {
+  top: -10px;
+  width: 20px;
+}
+
+.hamburger:after {
+  top: 10px;
+  width: 25px;
+}
+
+.toggle-menu {
+  position: absolute;
+  width: 30px;
+  height: 100%;
+  z-index: 3;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.hamburger,
+.toggle-menu {
+ display: block;
+}
+
+nav input:checked ~ .hamburger {
+  background: transparent;
+}
+
+nav input:checked ~ .hamburger:before {
+  top: 0;
+  transform: rotate(-45deg);
+  width: 30px;
+}
+
+nav input:checked ~ .hamburger:after {
+  top: 0;
+  transform: rotate(45deg);
+  width: 30px;
+}
+
+nav input:checked ~ .menu {
+  left: 0;
+  box-shadow: -20px 0 40px rgba(248, 212, 212, 0.3);
+}
   
+
+/******************************************/
+
+ /* header nav (oefenen) */
+
+
+.header-bestellen {
+  display: flex;
+  justify-content: center;
+  background-color: #D5C6B4;
+  padding: 0;
+  font-size: 0.9em;
+  height: 2em;
+}
+
+header img {
+width: 2em;
+}
+
+header {
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+  padding: 10px 20px;
+}
+
+header ul {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+header li {
+  display: flex;
+  align-items: center;
+}
+
+header button {
+  background-color: transparent;
+  border:none;
+}
+
+.logo {
+  width: 50px; /* Pas de grootte van het logo aan */
+  margin-left: 15px;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+  margin-right: auto; /* Zorgt ervoor dat de menu-items links blijven */
+flex-direction:column;
+  padding: 0;
+}
+
+.menu img {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+.icons {
+  display: flex;
+  gap: 15px; /* Ruimte tussen de iconen */
+}
+
+.icons img {
+  width: 24px;
+  height: 24px;
+}
