--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,25 @@
   --hover-kleur: #ffffff; /* Lichte tint */
 }
 
+
+/* CSS Custom Propertie dark mode toggle */
+@media screen {
+  :root {
+  --background-color: #ffffff;
+  --text-color: #333333;
+  --accent-color: #D3BBAF;
+  --slider-bg: #ccc;
+  --slider-thumb: #ffffff;
+}
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: rgb(0, 0, 0);
+  }
+}
+
+
 /* Reset */
 * {
   margin: 0;
@@ -14,12 +33,20 @@
   box-sizing: border-box;
 }
 
-/* Body styling */
+/* Body styling dark mode */
 body {
   font-family: Arial, sans-serif;
   color: var(--hoofd-kleur);
   background-color: var(--achtergrond-kleur);
   line-height: 1.6;
+}
+
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 /* Header */
@@ -247,7 +274,6 @@ footer ul li a {
 footer ul li a:hover {
   color: var(--accent-kleur);
 }
-
 
 
 
@@ -758,4 +784,61 @@ video {
 
 .nieuwsbrief-form button:hover {
   background-color: var(--hover-kleur);
+}
+
+
+
+
+/* Toggle Switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--slider-bg);
+  border-radius: 34px;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: var(--slider-thumb);
+  border-radius: 50%;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: var(--accent-color);
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+/* Donkere modus */
+body.dark-mode {
+  --background-color: #333333;
+  --text-color: #ffffff;
+  --slider-bg: #555;
+  --slider-thumb: #fff;
 }
