--- a/styles/style.css
+++ b/styles/style.css
@@ -1192,6 +1192,16 @@ body.dark-mode {
   font-weight: bold;
 }
 
+@keyframes zoom {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
+.cart-count.updated {
+  animation: shake 0.3s ease, zoom 0.3s ease;
+}
+
   /* ============================================================================== 
                             -thema kerst-                       
    ============================================================================== */
