--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
   --text-color: #333333;
   --accent-color: #D3BBAF;
   --slider-bg: #ccc;
-  --slider-thumb: #ffffff;
+  --slider-thumb: #272020;
 }
 }
 
